--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "x0 pages",
     "clean": "rm -rf dist",
     "build": "x0 build pages",
-    "now-build": "npm run build && npm run build"
+    "now-build": "npm run clean && npm run build"
   },
   "dependencies": {
     "@compositor/kit": "^1.0.47",
