--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@compositor/kit": "^1.0.47",
-    "@compositor/x0": "^6.0.0",
-    "@rebass/markdown": "^1.0.0-1",
-    "rebass": "^2.0.0",
-    "styled-components": "^3.3.3"
+    "@compositor/x0": "^6.0.7",
+    "@rebass/markdown": "^1.0.0",
+    "rebass": "^2.3.4",
+    "styled-components": "^4.1.1"
   },
   "x0": {
     "title": "johno"
