--- a/package.json
+++ b/package.json
@@ -2,19 +2,12 @@
   "private": true,
   "name": "johno.com",
   "scripts": {
-    "start": "x0 pages",
-    "clean": "rm -rf dist",
-    "build": "x0 build pages",
-    "now-build": "npm run clean && npm run build"
+    "start": "gatbsy develop",
+    "build": "gatbsy build",
+    "now-build": "yarn build"
   },
   "dependencies": {
-    "@compositor/kit": "^1.0.47",
-    "@compositor/x0": "^6.0.7",
-    "@rebass/markdown": "^1.0.0",
-    "rebass": "^2.3.4",
-    "styled-components": "^4.1.1"
-  },
-  "x0": {
-    "title": "johno"
+    "gatsby": "latest",
+    "gatsby-theme-minimal-blog": "^0.0.1"
   }
 }
