--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "gatsby": "^2.1.32",
-    "gatsby-theme-digital-garden": "^0.0.1-alpha.9",
+    "gatsby-theme-digital-garden": "^0.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
