--- a/package.json
+++ b/package.json
@@ -11,9 +11,23 @@
     "gatsby": "2.13.27",
     "gatsby-theme-digital-garden": "0.1.3",
     "gatsby-theme-digital-garden-blog": "0.1.2",
+    "husky": "^3.0.1",
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.18.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-three-fiber": "2.2.12",
     "three": "0.106.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,md,mdx,json}": [
+      "prettier --write --no-semi --single-quote",
+      "git add"
+    ]
   }
 }
