Ensure correct version of react is used

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
       "prettier --write --no-semi --single-quote",
       "git add"
     ]
+  },
+  "resolutions": {
+    "react": "16.9.0",
+    "react-dom": "16.9.0"
   }
 }
