--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "now-build": "yarn build"
   },
   "dependencies": {
-    "@babel/standalone": "^7.6.4",
-    "@babel/template": "^7.6.0",
     "gatsby": "2.16.4",
     "gatsby-plugin-fathom": "1.1.0",
     "gatsby-theme-austere": "0.0.11",
@@ -17,9 +15,7 @@
     "husky": "3.0.9",
     "lint-staged": "9.4.2",
     "prettier": "1.18.2",
-    "randomatic": "^3.1.1",
     "react": "16.10.2",
-    "react-beautiful-dnd": "^11.0.5",
     "react-dom": "16.10.2",
     "three": "0.109.0"
   },
@@ -36,6 +32,7 @@
   },
   "resolutions": {
     "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "@babel/helpers": "^7.6.0"
   }
 }
