--- a/now.json
+++ b/now.json
@@ -1,10 +1,7 @@
 {
   "version": 2,
   "name": "johno",
-  "alias": [
-    "johno.com",
-    "www.johno.com"
-  ],
+  "alias": ["johno.com"],
   "builds": [
     {
       "src": "package.json",
