--- a/packages/gatsby-plugin-component-graph/package.json
+++ b/packages/gatsby-plugin-component-graph/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gatsby-plugin-component-graph",
   "version": "0.0.1",
+  "repository": "johno/_/packages/gatsby-plugin-component-graph",
   "dependencies": {
     "gatsby-source-filesystem": "2.1.46",
     "gatsby-transformer-json": "2.2.25"
