--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
   },
   "lint-staged": {
     "*.{js,md,mdx,json}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "jest": {
