--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,7 @@ name: Test
 on: [push, pull_request]
 
 jobs:
-  build-and-test:
-    name: 'Build on ${{ matrix.platform }} with node.js ${{ matrix.node-version }}'
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [10, 12]
-    runs-on: ${{ matrix.platform }}
+  test:
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -17,7 +11,7 @@ jobs:
       - name: Set up node
         uses: actions/setup-node@master
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12.x
 
       - name: Install
         run: yarn
