--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
     "testEnvironment": "node"
   },
   "resolutions": {
+    "@babel/helpers": "7.6.0",
+    "@emotion/core": "10.0.28",
+    "@mdx-js/react": "1.5.7",
+    "@theme-ui/components": "0.3.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "@babel/helpers": "7.6.0",
-    "@emotion/core": "10.0.27",
-    "theme-ui": "0.3.1",
-    "@theme-ui/components": "0.3.1"
+    "theme-ui": "0.3.1"
   }
 }
