--- a/packages/gatsby-theme-austere/package.json
+++ b/packages/gatsby-theme-austere/package.json
@@ -7,11 +7,11 @@
   "dependencies": {
     "@emotion/core": "10.0.28",
     "@mdx-js/react": "1.5.7",
+    "@theme-ui/prism": "^0.3.0",
     "gatsby-plugin-react-helmet": "3.1.23",
     "gatsby-plugin-sitemap": "2.2.28",
     "gatsby-plugin-theme-ui": "0.3.0",
     "gatsby-theme-blog-core": "1.2.15",
-    "prism-react-renderer": "^1.0.2",
     "react-helmet": "5.2.1",
     "theme-ui": "0.3.1"
   },
