--- a/packages/gatsby-theme-austere/package.json
+++ b/packages/gatsby-theme-austere/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/core": "10.0.28",
     "@mdx-js/react": "1.5.7",
+    "gatsby-core-utils": "^1.0.31",
     "gatsby-plugin-react-helmet": "3.1.23",
     "gatsby-plugin-sitemap": "2.2.28",
     "gatsby-plugin-theme-ui": "0.3.0",
