--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@manypkg/cli": "0.11.1",
     "@theme-ui/components": "0.3.1",
     "chroma-js": "2.1.0",
-    "gatsby": "2.20.18",
+    "gatsby": "^2.20.10-recipes.143",
     "gatsby-plugin-fathom": "1.2.0",
     "gatsby-theme-austere": "0.1.1",
     "gatsby-theme-blog-tags": "0.0.11",
