--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chroma-js": "2.1.0",
     "gatsby": "2.22.3",
     "gatsby-plugin-fathom": "1.2.0",
+    "gatsby-plugin-mdx": "^1.2.11",
     "gatsby-theme-austere": "0.1.1",
     "gatsby-theme-blog-tags": "0.0.11",
     "husky": "4.2.5",
@@ -60,7 +61,8 @@
   "resolutions": {
     "@babel/helpers": "7.9.6",
     "@emotion/core": "10.0.28",
-    "@mdx-js/react": "1.6.3",
+    "@mdx-js/mdx": "2.0.0-next.0",
+    "@mdx-js/react": "2.0.0-next.0",
     "@theme-ui/components": "0.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
