--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "changeset": "changeset",
     "clean": "gatsby clean",
     "deploy": "now switch johno && now --prod",
+    "nuke": "yarn clean && rm -rf node_modules && rm yarn.lock",
     "pkg:fix": "manypkg fix",
     "pkg:check": "manypkg check",
     "release": "changeset publish",
@@ -15,18 +16,18 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@changesets/cli": "2.7.1",
+    "@changesets/cli": "2.7.2",
     "@manypkg/cli": "0.13.0",
     "@theme-ui/components": "0.3.1",
     "chroma-js": "2.1.0",
-    "gatsby": "2.22.3",
-    "gatsby-plugin-fathom": "1.2.0",
-    "gatsby-plugin-mdx": "^1.2.11",
+    "gatsby": "2.22.11",
+    "gatsby-plugin-fathom": "1.3.0",
+    "gatsby-plugin-mdx": "^1.2.12",
     "gatsby-theme-austere": "0.1.1",
     "gatsby-theme-blog-tags": "0.0.11",
     "husky": "4.2.5",
     "jest": "26.0.1",
-    "lint-staged": "10.2.4",
+    "lint-staged": "10.2.6",
     "lodash.sample": "4.2.1",
     "prettier": "2.0.5",
     "react": "16.13.1",
