--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-mdx": "^1.2.12",
     "gatsby-theme-austere": "0.1.1",
     "gatsby-theme-blog-tags": "0.0.11",
+    "gatsby-theme-mdx-deck": "^4.1.0",
     "husky": "4.2.5",
     "jest": "26.0.1",
     "lint-staged": "10.2.6",
@@ -35,9 +36,6 @@
     "react-feather": "2.0.8",
     "theme-ui": "0.3.1",
     "three": "0.116.1"
-  },
-  "engines": {
-    "node": "12.x"
   },
   "workspaces": [
     "packages/*"
