--- a/packages/todo/package.json
+++ b/packages/todo/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/mdx": "1.6.3",
     "@mdx-js/react": "1.6.3",
     "@monaco-editor/react": "^3.3.2",
+    "@theme-ui/presets": "^0.3.0",
     "babel-plugin-remove-export-keywords": "^1.6.6",
     "firebase": "7.14.4",
     "gatsby": "2.22.3",
