--- a/packages/todo/package.json
+++ b/packages/todo/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-react-helmet": "3.3.2",
     "gatsby-plugin-theme-ui": "0.3.0",
     "get-query-param": "2.0.3",
+    "johno-ds": "^0.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-feather": "2.0.8",
