--- a/packages/todo/package.json
+++ b/packages/todo/package.json
@@ -10,21 +10,21 @@
   },
   "dependencies": {
     "@emotion/core": "10.0.28",
-    "@mdx-js/mdx": "1.6.3",
-    "@mdx-js/react": "1.6.3",
-    "firebase": "7.14.4",
-    "gatsby": "2.22.3",
-    "gatsby-plugin-mdx": "1.2.11",
-    "gatsby-plugin-react-helmet": "3.3.2",
+    "@mdx-js/mdx": "2.0.0-next.3",
+    "@mdx-js/react": "2.0.0-next.3",
+    "firebase": "7.16.1",
+    "gatsby": "2.24.4",
+    "gatsby-plugin-mdx": "1.2.27",
+    "gatsby-plugin-react-helmet": "3.3.10",
     "gatsby-plugin-theme-ui": "0.3.0",
     "get-query-param": "2.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-feather": "2.0.8",
-    "react-helmet": "6.0.0",
+    "react-helmet": "6.1.0",
     "theme-ui": "0.3.1"
   },
   "engines": {
-    "node": "12.x"
+    "node": "14.x"
   }
 }
