--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@manypkg/cli": "0.14.0",
     "@theme-ui/components": "0.3.1",
     "chroma-js": "2.1.0",
-    "gatsby": "2.24.11",
+    "gatsby": "2.24.25",
     "gatsby-plugin-fathom": "1.3.0",
-    "gatsby-plugin-mdx": "^1.2.29",
+    "gatsby-plugin-mdx": "^1.2.33",
     "gatsby-theme-austere": "0.1.1",
     "gatsby-theme-blog-tags": "0.0.11",
     "husky": "4.2.5",
-    "jest": "26.1.0",
+    "jest": "^26.2.2",
     "lint-staged": "10.2.11",
     "lodash.sample": "4.2.1",
     "prettier": "2.0.5",
@@ -34,7 +34,7 @@
     "react-dom": "16.13.1",
     "react-feather": "2.0.8",
     "theme-ui": "0.3.1",
-    "three": "0.118.3"
+    "three": "0.119.1"
   },
   "workspaces": [
     "packages/*"
