--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@manypkg/cli": "0.14.0",
     "@theme-ui/components": "0.3.1",
     "chroma-js": "2.1.0",
-    "gatsby": "2.24.25",
+    "gatsby": "2.24.26",
     "gatsby-plugin-fathom": "1.3.0",
     "gatsby-plugin-mdx": "^1.2.33",
     "gatsby-theme-austere": "0.1.1",
@@ -33,7 +33,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-feather": "2.0.8",
-    "theme-ui": "0.3.1",
+    "theme-ui": "^0.3.1",
     "three": "0.119.1"
   },
   "workspaces": [
