Add some styles and index page

--- a/package.json
+++ b/package.json
@@ -3,35 +3,24 @@
   "name": "johno.com",
   "type": "module",
   "scripts": {
-    "postinstall": "breadbox --dest public/web_modules",
-    "build": "toast incremental .",
+    "build": "toast incremental . && cp src/styles.css public",
+    "clean": "rm -rf node_modules .tmp public",
     "deploy": "now switch johno && now --prod",
-    "clean": "rm -rf node_modules .tmp public"
+    "serve": "serve public",
+    "postinstall": "breadbox --dest public/web_modules"
   },
   "dependencies": {
     "@sector/breadbox": "^0.0.4",
     "@toastdotdev/mdx": "0.0.6",
     "chroma-js": "2.1.0",
     "gray-matter": "^4.0.2",
-    "husky": "4.2.5",
-    "jest": "^26.2.2",
-    "lint-staged": "10.2.11",
     "lodash.sample": "4.2.1",
+    "lodash.sortby": "^4.7.0",
     "prettier": "2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-feather": "2.0.8",
+    "serve": "^11.3.2",
     "toast": "^0.3.19"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,md,mdx,json}": [
-      "prettier --write"
-    ]
   },
   "engines": {
     "node": "14.x"
@@ -54,8 +43,7 @@
       "react-helmet",
       "preact/compat",
       "chroma-js",
-      "lodash.sample",
-      "react-feather"
+      "lodash.sample"
     ]
   }
 }
