--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "toast incremental . && cp src/styles.css public",
     "clean": "rm -rf node_modules .tmp public",
-    "deploy": "vercel switch johno && yarn build && vercel",
+    "deploy": "vercel switch johno && yarn build && vercel --prod",
     "serve": "serve public",
     "postinstall": "breadbox --dest public/web_modules"
   },
