--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "serve": "^11.3.2",
     "toast": "^0.3.30"
   },
+  "workspaces": [
+    "lab/*"
+  ],
   "engines": {
     "node": "14.x"
   },
